Se agregan los botones Borrar y Editar

--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
                     <caption>Resumen RDI</caption>
                     <thead class="table-dark " >
                         <tr>
-                            <th>N° RDI</th>
-                            <th>N° FICHA</th>
-                            <th>ESPECIALIDAD</th>
-                            <th>DESCRIPCIÓN</th>
-                            <th>RESPONSABLE</th>
-                            <th>ESTADO</th>
+                            <th class="col-1">N° RDI</th>
+                            <th class="col-1">N° FICHA</th>
+                            <th class="col-2">ESPECIALIDAD</th>
+                            <th class="col-3">DESCRIPCIÓN</th>
+                            <th class="col-2">RESPONSABLE</th>
+                            <th class="col-1">ESTADO</th>
+                            <th class="col-2">ACCION</th>
+
                         </tr>
                     </thead>
                     <tbody id="dataRdi">
@@ -99,17 +101,17 @@
                             <td>dato 1</td>
                             <td>dato 2</td>
                             <td>dato 3</td>
-                            <td class="max-e">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel harum suscipit praesentium ipsa fugiat? Facilis provident earum vero sint non voluptatibus dicta eligendi asperiores officia, hic aut! Impedit, laudantium consectetur!</td>
+                            <td class="max-e">Lorem ipsum, dolor !</td>
                             <td>dato 5</td>
-                            <td>dato 5</td>
+                            <td>dato 6</td>
                         </tr>
                         <tr>
                             <td >dato 1</td>
                             <td>dato 2</td>
                             <td>dato 3</td>
-                            <td>dato 4 4444444444 4444444 44444444444444444 444444444 44444444 4444444444444444 4   4 444444444 5555555555555</td>
+                            <td>dato 4 4444444444 444</td>
                             <td>dato 5</td>
-                            <td>dato 5</td>
+                            <td>dato 6</td>
                         </tr>
 
                         
