se agrega funcion eliminar :P

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </button>
               </div>
               <div class="modal-body">
-                  <form class="row" id="Modal">
+                  <form class="row" id="ModalEdit">
                      
                       <div class="mb-3 col-4">
                         <label for="tag-especialidad" class="col-form-label">Número Ficha:</label>
